# nis2

./: .gitignore  99_LOOPS_IMPROVEMENTS_SUMMARY.md  99_LOOPS_ROUND2_SUMMARY.md  ACCESSIBILITY_AUDIT_REPORT.md  ACCESSIBILITY_FIXES.patch  AUDIT_REPORT.md  CHANGELOG.md  CODE_AUDIT_BREAKING_ISSUES.md  CODE_AUDIT_BREAKING_ISSUES_FIXED.md  CODE_AUDIT_FINAL_FIXES.md  IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_FIXES_COMPLETE.md  SECURITY_FIXES_SUMMARY.md  START.bat  START.sh  START_HERE.txt  UX_POLISH_PROGRESS.md  VISUAL_SHOWCASE.md  audit_sessions.db  conftest.py  main.py  requirements.txt  test.db
nis2-audit-app/: AUDIT_REPORT.md  STARTER_README.md  UNCLE_EXPERIENCE.md  UX_POLISH_SUMMARY.md  VERSION  audit_sessions.db  demo_romenglish.py  demo_screens.py  install.sh  launch.bat  launch.sh  nis2-audit  nis2-audit.bat  nis2-audit.ps1  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run.py  run.sh  run_tests.sh  setup  setup.bat  setup.ps1  start.py  start.sh  test.db  test_nis2.py  test_run.py
nis2-audit-app/app/: __init__.py  cli.py  config.py  error_handling.py  jsonrpc_server.py  logging_config.py  secrets.py  security_pinning.py  security_utils.py  startup_checks.py  textual_app.py  user_experience.py  user_friendly_errors.py  utils.py
nis2-audit-app/app/audit/: __init__.py  checklist.py  classifier.py  finding_generator.py  gap_analyzer.py  knowledge_base.py  scorer.py
nis2-audit-app/app/connector/: __init__.py  command_runner.py  device_manager.py
nis2-audit-app/app/i18n/: __init__.py  ro_en.py
nis2-audit-app/app/models/: __init__.py  audit_session.py  device.py  entity.py  finding.py  scan_result.py
nis2-audit-app/app/report/: __init__.py  generator.py
nis2-audit-app/app/scanner/: __init__.py  device_fingerprint.py  network_scanner.py
nis2-audit-app/app/tui/: app.css  (+4 more)
nis2-audit-app/copilot-instructions/: AGENTS.md
nis2-audit-app/scripts/: build_portable.py
nis2-audit-app/tests/: README.md  conftest.py  test_app_launch.py  test_config.py  test_navigation.py  test_startup_checks.py
(+139 files in other folders)
